[tool.poetry]
name = "unfqt"
version = "0.2.0"
description = ""
authors = ["Joe Schr <joe.vandelay@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
detecta = "^0.0.5"
numpy = "^1.24.2"
pandas = "^1.5.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
