[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "unfqt"
version = "0.2.4"
description = ""
authors = [{name="Joe Schr",email="joe.vandelay@gmail.com"}]
requires-python = ">=3.7"
dependencies = [
  "detecta",
  "numpy",
  "pandas",
  "psutil",
  "mplfinance",
  "matplotlib"
]

[options]
packages = ["unfqt"]
install_requires = [
  "detecta",
  "numpy",
  "pandas",
  "psutil",
  "mplfinance",
  "matplotlib"
]
